	  format version and not the NTFS version of the imaged volume which is
	  totally useless.  (Anton)
	- ntfsclone: Make ntfsclone image format extensible.  (Anton)
	- ntfsclone: Fix endianness problems.  (Anton)
	- Allow ntfscp to create the destination file if it does not already
	  exists by calling ntfs_create().  (Hil)
	- Fix GUID to string conversion.  (Anton)
	- Multiple big-endiness fixes.  (zhanglinbao, Yuval)
	- Spelling mistake fixes.  (Yuval)
	- Remove inline keywords from static non-one-liners.  (Szaka, Yuval)
	- Memory leak fixes.  (Yura, Yuval)
	- Change ntfs_collate()'s signature to take size_t's.  (Yuval)
	- Move ntfs_is_collation_rule_supported() from collate.h to collate.c
	  and rewrite it to be clearer.  (Yuval)
	- Move ntfs_index_entry_mark_dirty() to index.c.  (Szaka)
	- Introduce misc.c. Move ntfs_[mc]alloc there.  (Szaka)
	- Change malloc() calls to ntfs_malloc().  (Szaka)
	- Factor ntfs_attr_fill_hole() out of ntfs_attr_pwrite().  (Szaka)

21/06/2006 - 1.13.1 - Various fixes.

	- Fix bug in ntfs_attr_pwrite() when we sometimes lose current run in
	  the runlist.  (Yura)
	- Fix build with --disable-gnome-vfs --enable-fuse-module.  (Gentoo)
	- ntfscluster: identify files even if their clusters aren't set
	  in $Bitmap (useful to find potentially corrupted files). (Szaka)
	- mkntfs: set the physical drive and the extended boot signature to
	  0x80 in the Extended BPB which are needed to boot from disk. (Szaka)
	- ntfsinfo: fix two freed memory usages when dumping $SDS and index
	  allocation entries.  (Szaka)
	- libntfs: add ntfs_attr_readall() which reads the entire data 
	  from an ntfs attribute.  (Szaka)
	- libntfs: add ntfs_index_root_get() which reads the index root of 
	  an attribute.  (Szaka)
	- ntfsclone: the --metadata option will wipe the timestamps in the
	  index allocation attributes as well. This further decreases the 
	  compressed metadata image size by 10-25% and more importantly it